    in the Model.

* Some bugs in the Java ModelInstance Type were fixed.
  - Empty model instances now get a created default name.
  - Illegal arguments are now handled appropriately.
  - The copy mechanism for @pre values works now correctly when invoking
    empty constructors.
  
* Some bugs in the OCL Standard Library were fixed.


GUI
---
* The Model Instance Browser has been improved.
  - Owned properties of ModelInstanceElements can now be browsed.
  

Tests
-----
* A new Modelbus Test Suite Plug-in has been introduced.

* A new OCL Standard Library Test Suite Plug-in has been introduced.

* Some test cases have been added to the Generic Model Instance Type
  Test Suite.
  - Illegal arguments are now tested.
  - Recasts between primitive type instances are now tested.


Release 2.0 (Scheduled: December 2009)
======================================
* The Pivot Model do now contain the PrimitiveTypeKind Void for the adaptation
  of a void Type for Operations without return Parameter.

* The ModelBus Architecture was refactored.
  - IModelInstances are now meta model independent.
  - The IModel interface was refactored.
    > A new method getType() was introduced.
    > A new method isInstanceOf(Type) was introduced.
  - The IModelInstance interface and the IModelObject respectively 
    IModelElement interface have been refactored and restructured completely.

* Some bugs in the UML2 Meta Model were fixed.
  - UML2 models can now contain n-ary associations.
  - Interfaces are now mapped correctly.
  - Abstract DataTypes are no longer adapted.
  - Logging now works properly.

* Some bugs in the EMF Ecore Meta Model were fixed.
  - Logging now works properly.

* New Meta Model added: Java.

* The Java Model Instance Type has been refactored completely.
  - Java instances can now also be imported, if they implement or extend Java
    Classes or Interfaces defined in the model.

* The EMF Ecore Model Instance Type has been refactored completely.
